@@ -1,6 +1,5 @@
 
 Prio 1:
-* fix -M
 * print hostnames if present, not IP
 * hydra-smb more than 1 connection?
 * add help hints?
